<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">tipcalculator</string>
    <string name="action_settings">Settings</string>
    <string name="Bill_Amount">Bill Amount </string>
    <string name="enter_bill_amount">Enter your bill amount</string>
    <string name="Round">Round to nearest dollar</string>
    <string name="Calc">Calculate</string>
    <string name="Tip">Tip:</string>
</resources>
