<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalculatorActivity" >

    <TextView
        android:id="@+id/BillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bill_Amount"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtBillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/BillAmount"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_toRightOf="@id/BillAmount"
        android:hint="@string/enter_bill_amount"
        android:inputType="numberDecimal" />

    <CheckBox
        android:id="@+id/chkRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtBillAmount"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/Round" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chkRound"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/Calc" />

    <TextView
        android:id="@+id/txtTipResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCalculate"
        android:layout_marginTop="@dimen/lower_margin"
        android:text="@string/Tip" />

</RelativeLayout>